// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`<ResultDetail /> should render 1`] = `
<div>
  <section
    class="section-light"
  >
    <div
      class="container"
    >
      <div
        class="wrapper-light"
      >
        <div
          class="sc-bxivhb gtwcOJ"
        >
          <h2>
            Montant indicatif de votre indemnité
          </h2>
          <h3
            style="font-size: 2rem;"
          >
            500 €
          </h3>
          <p>
            <em>
              Sur la base du calcul de l'indemnité minimum légale de licenciement.
            </em>
          </p>
        </div>
      </div>
    </div>
  </section>
  <section
    class="section-light"
  >
    <div
      class="container"
    >
      <div
        class="wrapper-light"
      >
        <table
          style="font-size: 1.2em;"
          width="100%"
        >
          <tbody>
            <tr>
              <td
                style="text-align: left; font-weight: bold;"
              >
                Moyenne des 12 derniers mois
              </td>
              <td
                style="text-align: center;"
              >
                1500 €
              </td>
            </tr>
            <tr>
              <td
                style="text-align: left; font-weight: bold;"
              >
                Moyenne des 3 derniers sois
              </td>
              <td
                style="text-align: center;"
              >
                2000 €
              </td>
            </tr>
            <tr>
              <td
                style="text-align: left; font-weight: bold;"
              >
                Salaire de référence
              </td>
              <td
                style="text-align: center;"
              >
                -
              </td>
            </tr>
            <tr>
              <td
                style="text-align: left; font-weight: bold;"
              >
                Base minimum : fin de contrat &gt; au
                 
                <a
                  href="https://www.legifrance.gouv.fr/affichCodeArticle.do?idArticle=LEGIARTI000019225838&cidTexte=LEGITEXT000006072050"
                >
                  27/09/2017
                </a>
              </td>
              <td
                style="text-align: center;"
              >
                1 / 4
              </td>
            </tr>
            <tr>
              <td
                style="text-align: left; font-weight: bold;"
              >
                Ancienneté
              </td>
              <td
                style="text-align: center;"
              >
                &gt; 10 ans
              </td>
            </tr>
          </tbody>
        </table>
      </div>
    </div>
  </section>
</div>
`;

exports[`<ResultDetail /> should render when rupture contrat is before sept 27 sept 2017 1`] = `
<div>
  <section
    class="section-light"
  >
    <div
      class="container"
    >
      <div
        class="wrapper-light"
      >
        <div
          class="sc-bxivhb gtwcOJ"
        >
          <h2>
            Montant indicatif de votre indemnité
          </h2>
          <h3
            style="font-size: 2rem;"
          >
            500 €
          </h3>
          <p>
            <em>
              Sur la base du calcul de l'indemnité minimum légale de licenciement.
            </em>
          </p>
        </div>
      </div>
    </div>
  </section>
  <section
    class="section-light"
  >
    <div
      class="container"
    >
      <div
        class="wrapper-light"
      >
        <table
          style="font-size: 1.2em;"
          width="100%"
        >
          <tbody>
            <tr>
              <td
                style="text-align: left; font-weight: bold;"
              >
                Moyenne des 12 derniers mois
              </td>
              <td
                style="text-align: center;"
              >
                1500 €
              </td>
            </tr>
            <tr>
              <td
                style="text-align: left; font-weight: bold;"
              >
                Moyenne des 3 derniers sois
              </td>
              <td
                style="text-align: center;"
              >
                2000 €
              </td>
            </tr>
            <tr>
              <td
                style="text-align: left; font-weight: bold;"
              >
                Salaire de référence
              </td>
              <td
                style="text-align: center;"
              >
                -
              </td>
            </tr>
            <tr>
              <td
                style="text-align: left; font-weight: bold;"
              >
                Base minimum : fin de contrat &lt;= au
                 
                <a
                  href="https://www.legifrance.gouv.fr/affichCodeArticle.do?idArticle=LEGIARTI000019225838&cidTexte=LEGITEXT000006072050&categorieLien=id&dateTexte=20170926"
                >
                  27/09/2017
                </a>
              </td>
              <td
                style="text-align: center;"
              >
                1 / 5
              </td>
            </tr>
            <tr>
              <td
                style="text-align: left; font-weight: bold;"
              >
                Ancienneté
              </td>
              <td
                style="text-align: center;"
              >
                &gt; 10 ans
              </td>
            </tr>
          </tbody>
        </table>
      </div>
    </div>
  </section>
</div>
`;

exports[`<ResultDetail /> should render with temps partiel 1`] = `
<div>
  <section
    class="section-light"
  >
    <div
      class="container"
    >
      <div
        class="wrapper-light"
      >
        <div
          class="sc-bxivhb gtwcOJ"
        >
          <h2>
            Montant indicatif de votre indemnité
          </h2>
          <h3
            style="font-size: 2rem;"
          >
            500 €
          </h3>
          <p>
            <em>
              Sur la base du calcul de l'indemnité minimum légale de licenciement.
            </em>
          </p>
        </div>
      </div>
    </div>
  </section>
  <section
    class="section-light"
  >
    <div
      class="container"
    >
      <div
        class="wrapper-light"
      >
        <table
          style="font-size: 1.2em;"
          width="100%"
        >
          <tbody>
            <tr>
              <td
                style="text-align: left; font-weight: bold;"
              >
                Salaire de référence
              </td>
              <td
                style="text-align: center;"
              >
                -
              </td>
            </tr>
            <tr>
              <td
                style="text-align: left; font-weight: bold;"
              >
                Base minimum : fin de contrat &gt; au
                 
                <a
                  href="https://www.legifrance.gouv.fr/affichCodeArticle.do?idArticle=LEGIARTI000019225838&cidTexte=LEGITEXT000006072050"
                >
                  27/09/2017
                </a>
              </td>
              <td
                style="text-align: center;"
              >
                1 / 4
              </td>
            </tr>
            <tr>
              <td
                style="text-align: left; font-weight: bold;"
              >
                Ancienneté
              </td>
              <td
                style="text-align: center;"
              >
                &gt; 10 ans
              </td>
            </tr>
          </tbody>
        </table>
      </div>
    </div>
  </section>
</div>
`;
